force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__AssetPerformanceSummaryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetPerformanceSummaryId__c</fullName>
    <label>Asset Performance Summary</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetPerformanceSummaryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>