force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__BrakingEfficiency__c.field-meta.xml
<CustomField>
    <fullName>ssot__BrakingEfficiency__c</fullName>
    <label>Braking Efficiency</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BrakingEfficiency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>