force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__DistanceTraveledNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DistanceTraveledNumber__c</fullName>
    <label>Distance Traveled</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DistanceTraveledNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>