force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__EngineEfficiency__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngineEfficiency__c</fullName>
    <label>Engine Efficiency</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngineEfficiency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>