force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__FuelConsumedUomId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FuelConsumedUomId__c</fullName>
    <label>Fuel Consumed Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FuelConsumedUomId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>