force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__FuelEfficiencyNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__FuelEfficiencyNumber__c</fullName>
    <label>Fuel Efficiency</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FuelEfficiencyNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>