force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__FuelEfficiencyUomId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FuelEfficiencyUomId__c</fullName>
    <label>Fuel Efficiency Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FuelEfficiencyUomId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>