force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__OperatorViolationCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__OperatorViolationCount__c</fullName>
    <label>Operator Violation Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OperatorViolationCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>