force-app/main/default/objects/ssot__VehiclePerformanceSummary__dlm/fields/ssot__rel_1697761232710_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761232710_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VehiclePerformanceSummary_FuelEffici_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>VehiclePerformanceSummary_FuelEffici_rel</relationshipLabel>
    <relationshipName>rel_1697761232710_end</relationshipName>
    <type>Lookup</type>
</CustomField>